WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262885
[GLib] Fix build without ITP
https://bugs.webkit.org/show_bug.cgi?id=262885
Summary
[GLib] Fix build without ITP
Olivier Blin
Reported
2023-10-09 06:45:05 PDT
This is a follow-up of
bug 262533
, to fix build of the GLib APIs without ITP (tracking prevention). This option in enabled by default in GLib ports, but it can use about 350 kB on ARMv7. As the WebKit library size keeps increasing, it can be useful for embedded ports to disable this, See also
bug 240719
for Content Extensions and its PR (
https://github.com/WebKit/WebKit/pull/834
) for a discussion about size optimizations and the GLib API.
Attachments
Add attachment
proposed patch, testcase, etc.
Olivier Blin
Comment 1
2023-10-09 06:47:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18836
EWS
Comment 2
2023-10-10 00:29:00 PDT
Committed
269133@main
(7b60261d3941): <
https://commits.webkit.org/269133@main
> Reviewed commits have been landed. Closing PR #18836 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug