[GLib] Fix build without ITP https://bugs.webkit.org/show_bug.cgi?id=262885

Reviewed by Michael Catanzaro.

Make the GLib API build when ITP (tracking prevention) is disabled.

* Source/WebKit/UIProcess/API/glib/WebKitNetworkSession.cpp:
(webkit_network_session_get_itp_summary):
(webkit_network_session_get_itp_summary_finish):
* Source/WebKit/UIProcess/API/glib/WebKitWebsiteDataManager.cpp:
(webkit_website_data_manager_get_itp_summary):
(webkit_website_data_manager_get_itp_summary_finish):
* Source/WebKit/UIProcess/API/glib/WebKitWebsiteDataManagerPrivate.h:

Canonical link: https://commits.webkit.org/269133@main